--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.dell.saif.musicplayer">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:allowBackup="true"
@@ -11,19 +12,24 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity"
+            android:configChanges="screenSize|orientation|screenLayout"/>
         <activity
             android:name=".Main3Activity"
-            android:configChanges="orientation|screenSize" />
-        <activity android:name=".Splash">
+            android:configChanges="layoutDirection|orientation|screenLayout|screenSize"
+            />
+        <activity android:name=".Splash"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Blank"></activity>
-        <service android:name=".AudioService"/>
+        <activity android:name=".Blank"
+            android:configChanges="orientation|screenSize"/>
+        <service android:name=".AudioService"
+            />
     </application>
 
 </manifest>
